src/objects/Time_Slot__c.object
<CustomObject>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>Application Type</description>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backend_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Backend User</description>
        <label>Backend User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Slots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>End Time</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Time Slots</relationshipLabel>
        <relationshipName>Time_Slots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Resource</description>
        <label>Resource</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Time Slots</relationshipLabel>
        <relationshipName>Time_Slots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>DATEVALUE(Start_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>This is the Start time</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Time_Slot_Status</valueSetName>
        </valueSet>
    </fields>
    <label>Time Slot</label>
    <nameField>
        <displayFormat>TSN-{0000}</displayFormat>
        <label>Time Slots Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Slots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>